1-Lessons/ch3/kuber-homeworks/1.5/dep3.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend 
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend 
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        ports:
        - containerPort: 8080
          name: http-port
---
apiVersion: v1
kind: Service
metadata:
  name: frontsvc
spec:
  selector:
    app: frontend
  ports:
    - name: porttofrontend
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backsvc
spec:
  selector:
    app: backsvc
  ports:
    - name: porttobackend
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress15
spec:
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: static-assets
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontsvc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backsvc
                port:
                  number: 8080
